2004-04-28  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* released current status as 0.0.17

2004-04-25  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* countless water experiments and tests, many files modified
	* water still has some "fixme"'s, but looks already very good
	* filehelper
	  - fixed bug that trashed results when using more than one open_dir/read_dir
	    at once (it did never happen in this project, though)
	
2004-02-22  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* all over the place
	  - introduced a sane command_* API
	  - mostly got rid of direct sea_object.do_something(data) calls,
	    replaced them with game.send(new command_do_something(sea_object*, data)
	    This is a precondition for networking.
	  - added many "fixme"s that have to be fixed before network play
	  - fixed bug in game::write(sea_object*)
	  - next major release would be with network support (0.1.0)

2004-02-22  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* command.h command.cpp
	  - added command class (needed for network communication)

2004-02-21  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* airplane.* airplane_interface.*
	  - added experimental airplane interface and test mission

2004-02-09  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* coastmap, coastline, coastsegment, mapcompile, triangulate
	  - new map format
	  - added polygon triangulation code
	  - terrain map (2d) is now displayed much nicer (and faster)

2004-02-01  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* user_interface.cpp
	  - added some foam code, not yet used

2004-01-26  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* added tool for cross section computation
	* removed all VIS_CROSS_SECTION code and replaced it with real
	  cross section values (better visibility determination function
	  has still to be made)

2004-01-25  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* subsim.cpp
	  - added simple hall of fame with recording and saving

2004-01-21  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* src/Makefile.am