@@ -4,13 +4,8 @@
 #ifndef BINSTREAM_H
 #define BINSTREAM_H
 
-#ifdef WIN32
 #include <SDL_types.h>
 #include <SDL_endian.h>
-#else
-#include <SDL/SDL_types.h>
-#include <SDL/SDL_endian.h>
-#endif
 #include <iostream>
 #include <string>
 using namespace std;
